--- a/src/api-gateway/package.json
+++ b/src/api-gateway/package.json
@@ -8,10 +8,13 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
+    "axios": "^1.8.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
